[project]
name = "advent-of-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zach Vaughan", email = "85461794+cyrii42@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alive-progress>=3.2.0",
    "bs4>=0.0.2",
    "loguru>=0.7.3",
    "pandas>=2.3.1",
    "polars>=1.31.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.41",
    "typer>=0.16.0",
]

[project.scripts]
aoc = "advent_of_code.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
